2015-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h: declare new -launch: method
	* EcCommand.m: implement -launch: method
	* EcTest.m: use -launch: when asked to get a connection to a process.

2015-08-25  Richard Frith-Macdonald <rfm@gnu.org>

	* AlarmTool.m:
	* LogTool.m:
	* Terminate.m:
	Set up well known hosts at start.

2015-07-21  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Be more rigorous about checking instance id values.  Ignore anything
	other than a non-negative integer instance ID.

2015-07-15  Niels Grewe <niels.grewe@halbordnung.de>

	* EcMemoryLogger.h
	* EcProcess.m:
	Add the ability to load a bundle to export memory logs to. Configured
	using the 'MemoryLoggerBundle' default key.

2015-07-13  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Restore lost effect of -ecNotLeaked to moderate changes in our idea
	of when we should generate a warening about potential leaks

2015-07-08  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Allow 'memory current' to list current object allocation values.
	Report time at which memory stats are generated.
	For allocation changes, also show time of previous report.

2015-07-08  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Allow the memory monitoring configuration to be set from the Console
	via the 'memory' command.  Improve the help text.  Improve the info
	provided in the debug/error reports.

2015-07-06  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Various tweaks to leak alert generation. Change default initial
	thresholds and change increments after an alert to be based upon
	the *peak* usage at the point when the alert was generated, rather
	than on the previous threshodld.  This reduces the number of alerts
	in a process whose memory usage grows rapidly on startup.

2015-07-03  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m: